--- a/home.html
+++ b/home.html
@@ -9,14 +9,33 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="logo-1.png" width="100" height="30" alt="logo-1"></a>
-        <a href="page1.html">page 1 - Array Intro</a>
-        <a href="page2.html">page 2 - Json intro</a>
-        <a href="page3.html">page 3 - Json Api Intro</a>
+         <ul>
+            <li><a href="home.html"><img src="img/image2.png" width="100" height="80" alt="logo-1"></a></li>
+            <li><a href="home.html">about</a>Home</li>
+            <li><a href="about.html">about</a>About</li>
+         </ul>   
     </nav>
     <p></p>
-    <main>
-        <footer>reesie1998@gmail.com</footer>
+    <main class="global-center-page">
+        <header>
+            <h2>Main Event</h2>
+        </header>
+        <p></p>
+            <div>
+                <input type="text" id="txtsearch" placeholder="# enter text to search" maxlength="25">
+                <button onclick="btnSearch()">search</button>
+                <a href="#" onclick="lnkClear()">clear</a>
+            </div>
+            <p></p>
+        <div>
+            <a href="#" onclick="videodemo ()">videodemo</a><br>            
+        </div>
+        <p></p>
+        <div id="divdisplayinfo" class="div-scroll-1">
+        </div>
+        <p></p>
     </main>
+    <footer class="global-center-page">reesie1998@gmail.com</footer>
 </body>
+        
 </html>
