--- a/home.html
+++ b/home.html
@@ -6,13 +6,16 @@
     <title>Main_Event</title>
     <link rel="stylesheet" href="css/global-1.css">
     <script src="js/page5.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    
+
 </head>
 <body>
     <nav>
          <ul>
-            <li><a href="home.html"><img src="img/image2.png" width="100" height="80" alt="logo-1"></a></li>
-            <li><a href="home.html">about</a>Home</li>
-            <li><a href="about.html">about</a>About</li>
+            <li><a href=""><img src="img/image2.png" width="100" height="80" alt="logo-1"></a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
          </ul>   
     </nav>
     <p></p>
