--- a/about.html
+++ b/about.html
@@ -22,7 +22,10 @@
             About
            </h2>
        </header>
-       <p></p>
+       <p>
+        This is about people coming together to watch thier favorite super stars perform.<br>
+
+       </p>
     
     
 </body>
