--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <title>Main_Event</title>
     <link rel="stylesheet" href="css/global-1.css">
     <script src="js/page5.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
     
 
 </head>
