--- a/about.html
+++ b/about.html
@@ -6,13 +6,14 @@
     <title>About</title>
     <link rel="stylesheet" href="css/global-1.css">
     <script src="js/page5.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <nav>
         <ul>
-           <li><a href=""><img src="img/image2.png" width="100" height="80" alt="logo-1"></a></li>
-           <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+           <li><a href=""><img src="img/shootingstar.jpg" width="140" height="80" alt="logo-1"></a></li>
+           <li style="font-size: xx-large;"><a href="home.html">Home</a></li>
+            <li style="font-size: xx-large;"><a href="about.html">About</a></li>
         </ul>   
    </nav>
    <p></p>
@@ -24,9 +25,9 @@
        </header>
        <p>
         This is about people coming together to watch thier favorite super stars perform.<br>
-
+  
        </p>
-    
+   </main>
     
 </body>
 </html>
