--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Main_Event</title>
     <link rel="stylesheet" href="css/global-1.css">
     <script src="js/page5.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">  
 
     
 
@@ -14,17 +14,19 @@
 <body>
     <nav>
          <ul>
-            <li><a href=""><img src="img/image2.png" width="100" height="80" alt="logo-1"></a></li>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#"><img src="img/shootingstar.jpg" width="140" height="80" alt="logo-1"></a></li>
+            <li style="font-size: xx-large;"><a href="home.html">Home</a></li>
+            <li style="font-size: xx-large;"><a href="about.html">About</a></li>
          </ul>   
     </nav>
     <p></p>
     <main class="global-center-page">
         <header>
-            <h2>Main Event</h2>
+            <h2 style="font-size:xx-large;">Main Event</h2>
         </header>
-        <p></p>
+        <p>
+            Search entertainment that you would like to enjoy. 
+        </p>
             <div>
                 <input type="text" id="txtsearch" placeholder="# enter text to search" maxlength="25">
                 <button onclick="btnSearch()">search</button>
