--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main_Event</title>
     <link rel="stylesheet" href="css/global-1.css">
-    <script src="js/page5.js"></script>
+    <script src="js/home.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">  
 
     
 
 </head>
-<body>
+<body onload="page_load()">
     <nav>
          <ul>
             <li><a href="#"><img src="img/shootingstar.jpg" width="140" height="80" alt="logo-1"></a></li>
@@ -22,7 +22,7 @@
     <p></p>
     <main class="global-center-page">
         <header>
-            <h2 style="font-size:xx-large;">Main Event</h2>
+            <h1 style="font-size:xx-large;">Main Event</h1>
         </header>
         <p>
             Search entertainment that you would like to enjoy. 
@@ -34,7 +34,7 @@
             </div>
             <p></p>
         <div>
-            <a href="#" onclick="videodemo ()">videodemo</a><br>            
+            <a href="#" onclick="giphyApiDemo1()">Giphy Api demo 1</a><br>            
         </div>
         <p></p>
         <div id="divdisplayinfo" class="div-scroll-1">
