--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main_Event</title>
     <link rel="stylesheet" href="css/global-1.css">
-    <script src="js/home.js"></script>
+    <script src="js/index.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">  
 
     
