--- a/about.html
+++ b/about.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="css/global-1.css">
-    <script src="js/page5.js"></script>
+    <script src="js/about.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <nav>
         <ul>
            <li><a href=""><img src="img/shootingstar.jpg" width="140" height="80" alt="logo-1"></a></li>
-           <li style="font-size: xx-large;"><a href="home.html">Home</a></li>
+           <li style="font-size: xx-large;"><a href="index.html">Home</a></li>
             <li style="font-size: xx-large;"><a href="about.html">About</a></li>
         </ul>   
    </nav>
