--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-           <li><a href=""><img src="img/shootingstar.jpg" width="140" height="80" alt="logo-1"></a></li>
+           <li><a href=""><img src="img/bright-falling-shooting-star-comet-.jpg" width="140" height="80" alt="logo-1"></a></li>
            <li style="font-size: xx-large;"><a href="index.html">Home</a></li>
             <li style="font-size: xx-large;"><a href="about.html">About</a></li>
         </ul>   
