--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
     <script src="js/index.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">  
 
+  <style>
+    body {
+        background-image: url(img/Merwil_Graffiti.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+    }
+    </style>
+
     
 
 </head>
 <body onload="page_load()">
     <nav>
          <ul>
-            <li><a href="#"><img src="img/bright-falling-shooting-star-comet-.jpg" width="140" height="80" alt="logo-1"></a></li>
+            <li><a href="#"><img src="img/graffiti-graffiti-brick-wall_1122-1004.jpg" width="140" height="80" alt="logo-1"></a></li>
             <li style="font-size: xx-large;"><a href="home.html">Home</a></li>
             <li style="font-size: xx-large;"><a href="about.html">About</a></li>
          </ul>   
@@ -34,7 +43,7 @@
             </div>
             <p></p>
         <div>
-            <a href="#" onclick="giphyApiDemo1()">Giphy Api demo 1</a><br>            
+            <br>            
         </div>
         <p></p>
         <div id="divdisplayinfo" class="div-scroll-1">
