--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <style>
     body {
-        background-image: url(img/Merwil_Graffiti.jpg);
+        background-image: url(img/istockphoto-673780656-612x612.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
@@ -23,7 +23,7 @@
 <body onload="page_load()">
     <nav>
          <ul>
-            <li><a href="#"><img src="img/graffiti-graffiti-brick-wall_1122-1004.jpg" width="140" height="80" alt="logo-1"></a></li>
+            <li><a href="#"><img src="img/image3.png" width="140" height="80" alt="logo-1"></a></li>
             <li style="font-size: xx-large;"><a href="home.html">Home</a></li>
             <li style="font-size: xx-large;"><a href="about.html">About</a></li>
          </ul>   
