--- a/about.html
+++ b/about.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/global-1.css">
     <script src="js/about.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
+
+    <style>
+        body {
+            background-image: url(img/bright-falling-shooting-star-comet-.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+        }
+        </style>
+
+
 </head>
 <body>
     <nav>
