--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-image: url(img/bright-falling-shooting-star-comet-.jpg);
+            background-image: url(img/istockphoto-136780036-612x612.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
@@ -22,7 +22,7 @@
 <body>
     <nav>
         <ul>
-           <li><a href=""><img src="img/bright-falling-shooting-star-comet-.jpg" width="140" height="80" alt="logo-1"></a></li>
+           <li><a href=""><img src="img/image3.png" width="140" height="80" alt="logo-1"></a></li>
            <li style="font-size: xx-large;"><a href="index.html">Home</a></li>
             <li style="font-size: xx-large;"><a href="about.html">About</a></li>
         </ul>   
