--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
            </h2>
        </header>
        <p>
-        This is about people coming together to watch thier favorite super stars perform.<br>
+        This is about people coming together to watch thier favorite super stars.<br>
+        Type of entertainment that you will enjoy and forget all negitave problems.<br>
+
   
        </p>
    </main>
