--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 style="font-size:xx-large;">Main Event</h1>
         </header>
         <p>
-            Search entertainment that you would like to enjoy. 
+            Search entertainment that you would like to enjoy with family and friends.  
         </p>
             <div>
                 <input type="text" id="txtsearch" placeholder="# enter text to search" maxlength="25">
